<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.HomeActivity"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="8dp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/tittle_logo" />

    <View
        android:id="@+id/view_tittle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_below="@id/tittle"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/assign_package_in_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/start_order"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/view_tittle"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />

    <Button
        android:id="@+id/receive_package_in_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/receive_packages"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/assign_package_in_order"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />

    <Button
        android:id="@+id/manage_package_in_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/manage_packages"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/receive_package_in_order"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />

    <Button
        android:id="@+id/driver_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/driver_order"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/manage_package_in_order"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />
    <Button
        android:id="@+id/reprint_runTimeSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/reprint_run_time_sheet"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/driver_delivery"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />
    <Button
        android:id="@+id/reprint_AWB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/reprint_AWB"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/reprint_runTimeSheet"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />
    <Button
        android:id="@+id/manage_cars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/manage_cars"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/reprint_AWB"
        android:background="@drawable/custom_login_btn_shape"
        android:visibility="gone" />

</RelativeLayout>