<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.StartOrderActivity">

    <TextView
        android:id="@+id/tittle_startOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_order"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="8dp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/logo_startOrder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/tittle_logo" />

    <View
        android:id="@+id/view_tittle_startOrder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_below="@id/tittle_startOrder"
        android:background="@color/colorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/orderNumber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/view_tittle_startOrder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/order_number_start_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_number"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/assign_new_packageToOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/assign_new_package"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/orderNumber_layout"
        android:background="@drawable/custom_login_btn_shape"/>

    <Button
        android:id="@+id/open_last_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/open_last_operation"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/assign_new_packageToOrder"
        android:background="@drawable/custom_login_btn_shape"/>

    <Button
        android:id="@+id/print_AWB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/printAWB"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/open_last_operation"
        android:background="@drawable/custom_login_btn_shape"/>

    <Button
        android:id="@+id/edit_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/edit_package_items"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/print_AWB"
        android:background="@drawable/custom_login_btn_shape"/>

    <ProgressBar
        android:id="@+id/startOrder_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>