<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:contentDescription="@string/loginImage" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="35dp"
            android:layout_below="@id/txt">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:drawableStart="@drawable/ic_user_name"
                android:drawablePadding="5dp"
                android:importantForAutofill="no"
                android:drawableLeft="@drawable/ic_user_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textInputLayout1">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:autofillHints="username"
                android:drawableLeft="@drawable/ic_lock" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_txt_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:layout_marginTop="10dp"
            android:textColor="#FF0000"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textInputLayout2" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_login_btn_shape"
            android:textColor="@color/white"
            android:layout_below="@id/login_txt_forgetPassword" />

        <TextView
            android:id="@+id/login_txt_virsion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_txt_forgetPassword"
            android:layout_marginTop="50dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>