<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AssignItemIntoPackageActivity">

    <TextView
        android:id="@+id/tittle_startOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pack_package"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="8dp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/logo_startOrder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/tittle_logo" />

    <View
        android:id="@+id/view_tittle_assign_item"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_below="@id/tittle_startOrder"
        android:background="@color/colorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assign_item_to_package_barcode_layout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/add_item_to_package_btn"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_barcode"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/view_tittle_assign_item"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assign_item_to_package_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_item_to_package_btn"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_below="@id/view_tittle_assign_item"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_item"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/custom_login_btn_shape"
        android:textColor="@color/white"/>

    <include
        android:id="@+id/rv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/product_item_row"
        android:layout_below="@id/add_item_to_package_btn"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rv_header"
        android:layout_margin="10dp"
        android:layout_above="@id/add_package_btn"
        />

    <Button
        android:id="@+id/add_package_btn"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_package"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_login_btn_shape"
        android:textColor="@color/white"/>

</RelativeLayout>